Fix Compilation Errors in UniqueKits Plugin